--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -32,6 +32,9 @@
 .search-results{
  overflow:auto;
  height:300px;
+ -webkit-border-radius:25px;
+ -moz-border-radius: 25px;
+ border-radius:25px;
 }
 /* Image positions*/
 .jive-icon-med {
