--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -32,6 +32,7 @@
 .search-results{
  overflow:auto;
  height:300px;
+ border:1px solid black;
  -webkit-border-radius:25px;
  -moz-border-radius: 25px;
  border-radius:25px;
