--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -88,7 +88,11 @@
      color: #15B;
      border: 1px solid black;
 }
-.pagingControls a:hover, .pagingControls a.selected{
+.pagingControls a:hover{
+color: #000;
+background-color: #FEE496;
+}
+.pagingControls a.active{
 color: #000;
 background-color: #FEE496;
 }
