--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -97,7 +97,7 @@ cursor:default;
 color: #000;
 background-color: #FEE496;
 }
-#pageNumber li  {background-color: transparent; text-decoration: none; }
+#pageNumber li  {background-color: transparent; text-decoration: none; display:inline}
 #pageNumber li:hover {background-color: #ff8700;}
 #pageNumber li:focus {background-color: #ff8700;}
 #pageNumber li a { display:block; }
